--- a/UI/src/app/config/project-config/basic-config/basic-config.component.html
+++ b/UI/src/app/config/project-config/basic-config/basic-config.component.html
@@ -18,137 +18,133 @@
 
 <p-toast [style]="{marginTop: '80px'}"></p-toast>
 <div class="main p-pl-6 p-pr-6 p-pb-1">
-    <div class="p-grid p-p-0 p-ml-5">
-        <div class="p-col-7 p-p-0 float-left w-60">
-            <div class="p-grid">
-                <div class="p-col-12 p-md-9">
-                    <div class="p-d-flex p-align-center position-relative p-pb-3">
-                        <a routerLink="/dashboard/Config/ProjectList" pButton pRipple type="button"
-                            icon="pi pi-arrow-left" class="p-button-raised p-button-secondary back-button"></a>
-                        <h5 class="card__primary__title__text p-mb-0">Basic Configuration</h5>
-                    </div>
-                    <p-messages severity="info">
-                        <ng-template pTemplate>
-                            <em class="pi pi-info-circle" style="font-size: 2rem"></em>
-                            <div class="p-ml-2">
-                                In case you do not see the preferred selection for any level in the dropdowns,
-                                please contact your organization system admin.
-                            </div>
-                        </ng-template>
-                    </p-messages>
-                </div>
+  <div class="p-grid p-p-0 p-ml-5">
+    <div class="p-col-7 p-p-0 float-left w-60">
+      <div class="p-grid">
+        <div class="p-col-12 p-md-9">
+          <div class="p-d-flex p-align-center position-relative p-pb-3">
+            <a routerLink="/dashboard/Config/ProjectList" pButton pRipple type="button" icon="pi pi-arrow-left"
+              class="p-button-raised p-button-secondary back-button"></a>
+            <h5 class="card__primary__title__text p-mb-0">Basic Configuration</h5>
+          </div>
+          <p-messages severity="info">
+            <ng-template pTemplate>
+              <em class="pi pi-info-circle" style="font-size: 2rem"></em>
+              <div class="p-ml-2">
+                In case you do not see the preferred selection for any level in the dropdowns,
+                please contact your organization system admin.
+              </div>
+            </ng-template>
+          </p-messages>
+        </div>
+      </div>
+
+      <form (ngSubmit)="onSubmit()" [formGroup]="form">
+        <div class="p-mb-3 p-mt-3 p-pl-1 form-container" *ngFor="let field of formData">
+          <div [ngSwitch]="field.inputType">
+            <div *ngSwitchCase="'switch'">
+              <div class="p-mb-3 p-mt-3 p-pl-1">
+                <label for="{{ field.hierarchyLevelId }}" class="is-kanban-label">Select {{
+                  field.hierarchyLevelName
+                  }} :&nbsp;&nbsp;</label>
+                <p-selectButton styleClass="p-d-inline" [options]="projectTypeOptions" optionLabel="name"
+                  optionValue="value" [multiple]="false" required id="{{ field.hierarchyLevelId }}"
+                  [formControlName]="field.hierarchyLevelId">
+                </p-selectButton>
+              </div>
             </div>
-
-            <form (ngSubmit)="onSubmit()" [formGroup]="form">
-                <div class="p-mb-3 p-mt-3 p-pl-1 form-container" *ngFor="let field of formData">
-                    <div [ngSwitch]="field.inputType">
-                        <div *ngSwitchCase="'switch'">
-                            <div class="p-mb-3 p-mt-3 p-pl-1">
-                                <label for="{{ field.hierarchyLevelId }}" class="is-kanban-label">Select {{
-                                    field.hierarchyLevelName
-                                    }} :&nbsp;&nbsp;</label>
-                                <p-selectButton styleClass="p-d-inline" [options]="projectTypeOptions"
-                                    optionLabel="name" optionValue="value" [multiple]="false" required
-                                    id="{{ field.hierarchyLevelId }}" [formControlName]="field.hierarchyLevelId">
-                                </p-selectButton>
-                            </div>
-                        </div>
-                        <div *ngSwitchCase="'text'">
-                            <div class="p-mb-3 p-mt-3">
-                                <span class="p-float-label">
-                                    <input required id="{{ field.hierarchyLevelId }}"
-                                        [formControlName]="field.hierarchyLevelId" [style]="{'width':'500px'}"
-                                        type="text" pInputText>
-                                    <label for="{{ field.hierarchyLevelId }}">Enter {{ field.hierarchyLevelName
-                                        }}</label>
-                                </span>
-                                <span class="p-invalid"
-                                    *ngIf="form.controls[field.hierarchyLevelId].errors?.stringValidator">Special Characters are not allowed.</span>
-                            </div>
-                        </div>
-                        <div *ngSwitchCase="'boolean'" class="p-mb-3">
-                            <ng-container *ngIf="ifSuperUser === true || isProjectAdmin === true">
-                                <p-inputSwitch name="{{field.hierarchyLevelId}}" id="{{field.hierarchyLevelId}}"
-                                    [formControlName]="field.hierarchyLevelId">
-                                </p-inputSwitch>
-                                <label for="{{field.hierarchyLevelId}}">
-                                    {{field.label1}}
-                                    </label>
-                                    <br>
-                                <span class="fa fa-info-circle kpi-info-icon" aria-hidden="true" for="{{field.hierarchyLevelId}}"></span>
-                                <span for="{{field.hierarchyLevelId}}" style="font-size: small;color: #333;">
-                                    {{field.label2}}
-                                </span>
-                            </ng-container>
-                        </div>
-                        <div *ngSwitchDefault>
-                            <span class="p-float-label w-50 p-mr-3">
-                                <p-autoComplete id="{{ field.hierarchyLevelId }}"
-                                    [formControlName]="field.hierarchyLevelId" [style]="{'width':'500px'}"
-                                    [suggestions]="field.filteredSuggestions" (completeMethod)="search($event, field)"
-                                    required="required" [dropdown]="true" field="name" [forceSelection]="true">
-                                    <ng-template let-country pTemplate="item">
-                                        <div class="country-item">
-                                            <div>{{country.name}}</div>
-                                        </div>
-                                    </ng-template>
-                                </p-autoComplete>
-                                <label for="{{ field.hierarchyLevelId }}">Select {{ field.hierarchyLevelName
-                                    }}</label>
-                            </span>
-                            <!-- <span class="p-invalid"
-                                *ngIf="form.controls[field.hierarchyLevelId].errors?.stringValidator"> ###, ~, ` and !
-                                are not allowed</span> -->
-                        </div>
+            <div *ngSwitchCase="'text'">
+              <div class="p-mb-3 p-mt-3">
+                <span class="p-float-label">
+                  <input required id="{{ field.hierarchyLevelId }}" [formControlName]="field.hierarchyLevelId"
+                    [style]="{'width':'500px'}" type="text" pInputText>
+                  <label for="{{ field.hierarchyLevelId }}">Enter {{ field.hierarchyLevelName
+                    }}</label>
+                </span>
+                <span class="p-invalid" *ngIf="form.controls[field.hierarchyLevelId].errors?.stringValidator">Special
+                  Characters are not allowed.</span>
+              </div>
+            </div>
+            <div *ngSwitchCase="'boolean'" class="p-mb-3">
+              <ng-container *ngIf="ifSuperUser === true || isProjectAdmin === true">
+                <p-inputSwitch name="{{field.hierarchyLevelId}}" id="{{field.hierarchyLevelId}}"
+                  [formControlName]="field.hierarchyLevelId">
+                </p-inputSwitch>
+                <label for="{{field.hierarchyLevelId}}">
+                  {{field.label1}}
+                </label>
+                <br>
+                <span class="fa fa-info-circle kpi-info-icon" aria-hidden="true"
+                  for="{{field.hierarchyLevelId}}"></span>
+                <span for="{{field.hierarchyLevelId}}" style="font-size: small;color: #333;">
+                  {{field.label2}}
+                </span>
+              </ng-container>
+            </div>
+            <div *ngSwitchDefault>
+              <span class="p-float-label w-50 p-mr-3">
+                <p-autoComplete id="{{ field.hierarchyLevelId }}" [formControlName]="field.hierarchyLevelId"
+                  [style]="{'width':'500px'}" [suggestions]="field.filteredSuggestions"
+                  (completeMethod)="search($event, field)" required="required" [dropdown]="true" field="name"
+                  [forceSelection]="true">
+                  <ng-template let-country pTemplate="item">
+                    <div class="country-item">
+                      <div>{{country.name}}</div>
                     </div>
-                </div>
-                <div class="save-container p-text-right p-col-12 p-md-9">
-                    <button pButton pRipple type="submit" class="p-button-lg p-button-success p-button-raised"
-                        icon="pi pi-save" iconPos="left" label="Save" [disabled]="!form.valid"></button>
-                </div>
-            </form>
-
+                  </ng-template>
+                </p-autoComplete>
+                <label for="{{ field.hierarchyLevelId }}">Select {{ field.hierarchyLevelName
+                  }}</label>
+              </span>
+            </div>
+          </div>
         </div>
-        <div class="p-col-5 p-p-0 float-left w-40">
-            <p-messages severity="info" [hidden]="!selectedProject">
-                <ng-template pTemplate>
-                    <em class="pi pi-spin pi-cog" style="font-size: 2rem"></em>
-                    <div class="p-ml-2">
-                        <a routerLink="/dashboard/Config/ToolMenu">Click here to configure/view all Tools</a>
-                    </div>
-                    <em class="pi pi-angle-double-right" style="font-size: 2rem"></em>
-                </ng-template>
-            </p-messages>
-            <p-table #dt [value]="configuredTools" dataKey="id" [rows]="3" [showCurrentPageReport]="true"
-                [loading]="loading" [paginator]="true" styleClass="p-datatable-gridlines w-100"
-                [alwaysShowPaginator]="false" [hidden]="!selectedProject" loadingIcon="loading-img">
-                <ng-template pTemplate="caption">
-                    <div class="table-header">
-                        Configured Tools
-                    </div>
-                </ng-template>
-                <ng-template pTemplate="body" let-tool>
-                    <tr>
-                        <td>
-                            {{tool.toolName}}
-                        </td>
-                        <td class="p-text-center">
-                            <button pButton pRipple type="button" class="p-button-sm p-button-raised p-button-success"
-                                icon="pi pi-cog" iconPos="left" label="Edit Configuration"
-                                routerLink="/dashboard/Config/JiraConfig"
-                                [queryParams]="{toolName : tool.toolName}"></button>
-                        </td>
-                    </tr>
-                </ng-template>
-                <ng-template pTemplate="emptymessage" let-columns>
-                    <tr>
-                        <td [attr.colspan]="2">
-                            No Tools Configured
-                        </td>
-                    </tr>
-                </ng-template>
-            </p-table>
+        <div class="save-container p-text-right p-col-12 p-md-9">
+          <button pButton pRipple type="submit" class="p-button-lg p-button-success p-button-raised" icon="pi pi-save"
+            iconPos="left" label="Save" [disabled]="!form.valid"></button>
         </div>
+      </form>
+
     </div>
+    <div class="p-col-5 p-p-0 float-left w-40">
+      <p-messages severity="info" [hidden]="!selectedProject">
+        <ng-template pTemplate>
+          <em class="pi pi-spin pi-cog" style="font-size: 2rem"></em>
+          <div class="p-ml-2">
+            <a routerLink="/dashboard/Config/ToolMenu">Click here to configure/view all Tools</a>
+          </div>
+          <em class="pi pi-angle-double-right" style="font-size: 2rem"></em>
+        </ng-template>
+      </p-messages>
+      <p-table #dt [value]="configuredTools" dataKey="id" [rows]="3" [showCurrentPageReport]="true" [loading]="loading"
+        [paginator]="true" styleClass="p-datatable-gridlines w-100" [alwaysShowPaginator]="false"
+        [hidden]="!selectedProject" loadingIcon="loading-img">
+        <ng-template pTemplate="caption">
+          <div class="table-header">
+            Configured Tools
+          </div>
+        </ng-template>
+        <ng-template pTemplate="body" let-tool>
+          <tr>
+            <td>
+              {{tool.toolName}}
+            </td>
+            <td class="p-text-center">
+              <button pButton pRipple type="button" class="p-button-sm p-button-raised p-button-success"
+                icon="pi pi-cog" iconPos="left" label="Edit Configuration" routerLink="/dashboard/Config/JiraConfig"
+                [queryParams]="{toolName : tool.toolName}"></button>
+            </td>
+          </tr>
+        </ng-template>
+        <ng-template pTemplate="emptymessage" let-columns>
+          <tr>
+            <td [attr.colspan]="2">
+              No Tools Configured
+            </td>
+          </tr>
+        </ng-template>
+      </p-table>
+    </div>
+  </div>
 </div>
 <p-blockUI [blocked]="blocked"></p-blockUI>
