--- a/UI/src/app/dashboardv2/filter-v2/filter-new.component.html
+++ b/UI/src/app/dashboardv2/filter-v2/filter-new.component.html
@@ -59,15 +59,15 @@
       *ngIf="this.selectedSprint?.['sprintState']?.toLowerCase() === 'active' && selectedTab?.toLowerCase() === 'iteration'">
       <span class="refresh-state p-p-2" (click)="displayModal = true"
         *ngIf=" (lastSyncData | json) == '{}' || lastSyncData.errorInFetch">
-        <img src="../../../assets/img/icon-refresh.svg" class="p-mr-1" alt="Refresh" />REFRESH
+        <img src="../../../assets/img/icon-refresh.svg" class="p-mr-1" alt="Refresh" />Refresh
       </span>
       <span class="refresh-state p-p-2"
         *ngIf=" !((lastSyncData | json) == '{}') && !lastSyncData.fetchSuccessful && !lastSyncData.errorInFetch">
-        <img src="../../../assets/img/icon-syncing.svg" class="p-mr-1" alt="Sync" />SYNCING
+        <img src="../../../assets/img/icon-syncing.svg" class="p-mr-1" alt="Sync" />Syncing
       </span>
       <span class="success-state p-p-2" *ngIf="!((lastSyncData | json) == '{}') && lastSyncData?.fetchSuccessful"
         (click)="onUpdateKPI()">
-        <img src="../../../assets/img/icon-update.svg" class="p-mr-1" alt="Update" />UPDATE
+        <img src="../../../assets/img/icon-update.svg" class="p-mr-1" alt="Update" />Update
       </span>
     </div>
 
