--- a/UI/src/app/dashboardv2/kpi-card-v2/kpi-card-v2.component.css
+++ b/UI/src/app/dashboardv2/kpi-card-v2/kpi-card-v2.component.css
@@ -307,8 +307,6 @@
 
 :host ::ng-deep .p-menu.p-menu-overlay {
   top: 40px !important;
-  /* left: initial !important;
-  right: 0; */
 }
 
 
@@ -316,7 +314,7 @@
   font-size: 1.1rem;
   font-weight: 1000;
   color: #4a4747;
-  font-family: 'primeicons';
+  font-family: 'primeicons', sans-serif;
   font-style: normal;
   -webkit-font-smoothing: antialiased;
 }
